2008-02-08  Ales Hakl  <ales at hakl dot net>

	* Makefile.am (nobase_include_HEADERS): install util.h

	* src/ports.c (dfsch_port_basetype): base class for ports (not
	used for anything, only for consistency)

2008-02-06  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c: Eliminated most warnings (and more or less
	redundant const declarations)

	* src/hash.c (dfsch__hash_native_register): support for custom
	hashes (with same API, usable even as environment entries)

2008-02-04  Ales Hakl  <ales at hakl dot net>

	* Makefile.am: Splited relevant modules into shared library (C
	API) and module (dfsch API) parts.

	* src/dfsch.c (dfsch_obj_write): print object pointers longer than
	32 bits correctly.

2008-02-03  Ales Hakl  <ales at hakl dot net>

	* dfsch/util.h: utility functions in public API

2008-01-27  Ales Hakl  <ales at hakl dot net>

	* lib/extref.c: External references

2008-01-17  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_empty_list_type): empty-list type
	(dfsch_abstract_type): abstract-type type
	(list_type): list type (common superclass of pair and empty-list)

	* src/weak.c (dfsch_weak_reference_dereference): lock allocator
	when checking for live reference 

2008-01-16  Ales Hakl  <ales at hakl dot net>

	* src/generic.c (dfsch_define_generic): merged ensure-generic into
	define-generic and define-method.

2008-01-14  Ales Hakl  <ales at hakl dot net>

	* scm/lib.scm: removed define-macro macro

	* src/native.c (define_macro): define-macro as special form

	* src/dfsch.c (dfsch_destructure): recursive destructuring

	* src/compile.c: compiler (expands macros, eliminates variable
	references)

2008-01-07  Ales Hakl  <ales at hakl dot net>

	* Makefile.am: install lib.scm

	* src/dfsch.c (dfsch_eval_impl): Macros are not implicit begin

2007-12-30  Ales Hakl  <ales at hakl dot net>

	* src/native.c (dfsch__native_register): removed support for
	user-defined forms (macros are general enough)
	all primitives as static structs
